# trudskill

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LMS_AGENT_HANDOFF.md  README.md  SDOPROF_TZ_FINAL.md  TZ_TRUDSKILL_ARENDNAYA_SDO.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tsconfig.base.json  tsconfig.json  vitest.config.ts
.claude/: launch.json
.devcontainer/: devcontainer.json  docker-compose.yml
.husky/: commit-msg
backend/: __init__.py  pyproject.toml
docs/: BACKUP_ROLLBACK.md  DOCUMENTATION_MAP.md  ENTERPRISE_OPERATIONAL_AUDIT.md  ENTERPRISE_OPERATIONAL_COMPLETION_REPORT.md  ENTERPRISE_OPERATIONAL_NEXT_STEPS.md  ENTERPRISE_OPERATIONAL_PLAN.md  ENTERPRISE_OPERATIONAL_REMAINING_GAPS.md  ENTERPRISE_OPERATIONAL_WAVE1_CHANGELOG.md  FRONTEND_UX_GOVERNANCE.md  LAUNCH_CHECKLIST.md  LAUNCH_RUNBOOK.md  NEST_DI_IMPORTS.md  NFR_LAUNCH_V1.md  README.md  TZ_ARENDNAYA_SDO_STATUS.md  TZ_MVP_TRACEABILITY.md  architecture-overview.md  backup-and-restore.md  cloud-development.md  deployment.md  environment-and-config.md  index.md  local-development.md  migration-checklist.md  mvp-domain-database.md  observability.md  operations-runbook.md  (+5 more)
services/auth/: .env.example  Dockerfile  pyproject.toml
services/auth/alembic/: env.py
services/auth/alembic/versions/: 20240101000000_init.py
services/auth/app/: db.py  main.py
services/auth/app/api/v1/: users.py
services/auth/app/core/: config.py  security.py
services/auth/app/models/: user.py
(+1297 files in other folders)
