[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = "Auth service for modular LMS"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.30"}
sqlalchemy = "^2.0"
alembic = "^1.13"
pydantic = "^2.7"
python-jose = "^3.3"
passlib = "^1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
